


-------------------------------------------------------------------
4.19.1:

-Bug fix for market charts spot price tooltip, on mouse / touch hover

-Bug fix for 'watch only' toggle on Update page

-------------------------------------------------------------------



-------------------------------------------------------------------
4.19.2:

-Bug fix for log viewing UI

-Removed / replaced stale markets

-------------------------------------------------------------------



-------------------------------------------------------------------
4.20.0:

-Initial support for DeFi markets (uniswap, uniswap-v2, balancer, bancor, curve), via the defipulse.com API

-------------------------------------------------------------------



-------------------------------------------------------------------
4.20.1:

-API fixes and optimizations (Optimized default results limits / Multiple-connection local auto-throttling / error fallback for Defipulse.com API connections)

-Fix for missing pairing volume data in charts, and 'volume percent up/down' in price alerts, for DeFi markets

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.21.0:

-Default config revision

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.21.1:

-Bug fix for DeFi liquidity pool asset names support (lowercase prefixes)

-Misc UX

-------------------------------------------------------------------



-------------------------------------------------------------------
4.22.0:

-Option to use a 'Generic' DeFi market (whatever has most USD volume on DeFiPulse.com API), or a specific platform (uniswap, uniswap-v2, balancer, curve, bancor)

-Optimizations

-Misc. UX

-------------------------------------------------------------------







































