@@ -64,7 +64,7 @@ global $app_config;
 ////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////
 
-
+// https://github.com/decred/dcrdata#apis
 function decred_api($type, $request) {
  
 global $app_config, $runtime_mode;
