@@ -4064,6 +4064,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Option to use a 'Generic' DeFi market (whatever has most USD volume on DeFiPulse.com API), or a specific platform (uniswap, uniswap-v2, balancer, curve, bancor)
 
+-Cron plugin available (DISABLED BY DEFAULT in power user config) for detecting new Decred proposals, and detecting when voting starts on them
+
 -Optimizations
 
 -Misc. UX
